# Technical-Dashboard

./: .gitignore  LICENSE.txt  Makefile  README.md  cliff.toml  setup_alias.sh
modules/maas-cds/: pyproject.toml  setup.cfg
modules/maas-cds/resources/templates/: cds-ai-production-completeness_template.json  cds-anomaly-correlation_template.json  cds-cams-tickets_template.json  cds-completeness-splitted_template.json  cds-completeness_template.json  cds-datatake_template.json  cds-deletion-issue_template.json  cds-downlink-datatake_template.json  cds-edrs-acquisition-pass-status_template.json  cds-expected_template.json  cds-hktm-acquisition-completeness_template.json  cds-hktm-production-completeness_template.json  cds-interface-product-deletion_template.json  cds-product_template.json  cds-publication_template.json  cds-quality-disclaimer_template.json  cds-sat-unavailability_template.json  maas-config-collector_template.json  maas-config-completeness-s3_template.json  maas-config-completeness-s5_template.json  maas-config-completeness_template.json  maas-config-dataflow_template.json  maas-config-mission_template.json  maas-config-satellite_template.json  maas-config-service_template.json  maas-config_template.json  raw-data-acq-passes-status-edrs_template.json  raw-data-aps-edrs_template.json  raw-data-deletion-issue_template.json  raw-data-prip-product_template.json  raw-data-quality-disclaimer_template.json  (+5 more)
modules/maas-cds/tests/: conftest.py  test_datatake.py  test_geo_mask_utils.py  test_periodutils.py  test_publications_name_generations.py
(+258 files in other folders)
